@@ -312,46 +312,6 @@ def _get_home():
 
 
 
-def _old_get_home():  #ignore me
-    """Return the closest possible equivalent to a 'home' directory.
-
-    We first try $HOME.  Absent that, on NT it's USERPROFILE if
-    defined, else, $HOMEDRIVE\$HOMEPATH, else C:\
-
-    """
-
-
-    try: return os.environ['HOME']
-    except KeyError: pass
-
-    if os.name == 'nt':
-        # For some strange reason, win9x returns 'nt' for os.name.
-
-        try: p = os.environ['USERPROFILE']
-        except KeyError: pass
-        else:
-            if os.path.exists(p): return p
-
-        try: p =  os.path.join(os.environ['HOMEDRIVE'],os.environ['HOMEPATH'])
-        except KeyError: pass
-        else:
-            if os.path.exists(p): return p
-
-        try:
-            import _winreg as wreg
-            key = wreg.OpenKey(wreg.HKEY_CURRENT_USER,
-                               'Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders')
-            p = wreg.QueryValueEx(key,'Personal')[0]
-            key.Close()
-            if os.path.exists(p): return p
-        except: pass
-        return 'C:\\'
-
-    raise RuntimeError('please define environment variable $HOME')
-
-
-
-
 get_home = verbose.wrap('$HOME=%s', _get_home, always=False)
 
 def _get_configdir():
@@ -387,54 +347,6 @@ def _get_data_path():
     path = os.sep.join([os.path.dirname(matplotlib.artist.__file__), 'mpl-data'])
     if os.path.isdir(path): return path
 
-#    if _have_pkg_resources:
-#        try:
-#            dist = pkg_resources.get_distribution('matplotlib')
-#        except pkg_resources.DistributionNotFound:
-#            # pkg_resources is installed, but setuptools wasn't used into install matplotlib.
-#            used_setuptools_to_install_MPL = False
-#        else:
-#            used_setuptools_to_install_MPL = True
-#
-#        if used_setuptools_to_install_MPL:
-#            req = pkg_resources.Requirement.parse('matplotlib')
-#            path = pkg_resources.resource_filename(req, 'share/matplotlib')
-#            return path
-#
-#    if os.environ.has_key('MATPLOTLIBDATA'):
-#        path = os.environ['MATPLOTLIBDATA']
-#        if os.path.isdir(path): return path
-#
-#    path = os.path.join(distutils.sysconfig.PREFIX, 'share', 'matplotlib')
-#    if os.path.isdir(path): return path
-#
-#    path = '/usr/local/share/matplotlib'
-#    if os.path.isdir(path): return path
-#
-#    path = '/usr/share/matplotlib'
-#    if os.path.isdir(path): return path
-#
-#    path = os.path.join(os.sep.join(__file__.split(os.sep)[:-1]),
-#                        'share','matplotlib')
-#    if os.path.isdir(path): return path
-#
-#    path = os.path.join(os.sep.join(__file__.split(os.sep)[:-5]),
-#                        'share','matplotlib')
-#    if os.path.isdir(path): return path
-#
-#    # CODE ADDED TO SUPPORT PY2EXE - you will need to copy
-#    # C:\Python23\share\matplotlib into your dist dir.  See
-#    # http://starship.python.net/crew/theller/moin.cgi/MatPlotLib
-#    # for more info
-#
-#    if sys.platform=='win32' and sys.frozen:
-#        path = os.path.join(os.path.split(sys.path[0])[0], 'matplotlibdata')
-#        if os.path.isdir(path):  return path
-#        else:
-#            # Try again assuming sys.path[0] is a dir not a exe
-#            path = os.path.join(sys.path[0], 'matplotlibdata')
-#            if os.path.isdir(path): return path
-#
     raise RuntimeError('Could not find the matplotlib data files')
 
 get_data_path = verbose.wrap('matplotlib data path %s', _get_data_path, always=False)
@@ -918,33 +830,6 @@ defaultParams = {
 
     }
 
-
-def _old_matplotlib_fname():
-    """
-    Return the path to the rc file using the old search method
-    """
-
-    fname = os.path.join( os.getcwd(), '.matplotlibrc')
-    if os.path.exists(fname): return fname
-
-    if os.environ.has_key('MATPLOTLIBRC'):
-        path =  os.environ['MATPLOTLIBRC']
-        if os.path.exists(path):
-            fname = os.path.join(path, '.matplotlibrc')
-            if os.path.exists(fname):
-                return fname
-
-    home = get_home()
-    if home is not None:
-        fname = os.path.join(home, '.matplotlibrc')
-        if os.path.exists(fname):
-            return fname
-
-    path =  get_data_path() # guaranteed to exist or raise
-    fname = os.path.join(path, '.matplotlibrc')
-    if not os.path.exists(fname):
-        warnings.warn('Could not find .matplotlibrc; using defaults')
-    return fname
 
 def matplotlib_fname():
     """
